--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "querystring": "^0.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
