--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-CLIENT_ID=your_spotify_client_id
-CLIENT_SECRET=your_spotify_client_secret
-REDIRECT_URI=http://localhost:8888/callback
+CLIENT_ID=a8c5f01dbaa942a995f4a05326fffe91
+CLIENT_SECRET=1a16be7cda9b4d99befa79f4f87a94fe
+REDIRECT_URI=https://spotifywebparty.onrender.com/callback
